tests/codegen/fail/scalar/derive_input/attr_transparent_multiple_named_fields.stderr
error: GraphQL scalar `transparent` attribute argument requires exactly 1 field
 --> fail/scalar/derive_input/attr_transparent_multiple_named_fields.rs:4:1
  |
4 | / struct Scalar {
5 | |     id: i32,
6 | |     another: i32,
7 | | }
  | |_^
